[package]
edition = "2018"
name = "rs-docker"
description = "Docker Remote API in Rust"
version = "0.0.60"
authors = ["Thiago Areias <kblo.thiago@gmail.com>"]
license = "Apache-2.0"
homepage = "https://gitlab.com/kblobr/rust-docker"
repository = "https://gitlab.com/kblobr/rust-docker.git"
documentation = "https://ghmlee.github.io/rust-docker/doc/docker"
readme = "README.md"
keywords = ["docker"]

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
hyper = "0.14.9"
hyperlocal = "0.8.0"
futures = "0.3.15"
tokio = "1.7.0"
